Style menu area for screens 950 and down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,3 +263,52 @@ footer{
 #photos > img {
     width: 100%;
 }
+
+/* media queries */
+
+
+/* for larger to medium screen sizes from 1200 wide and down  */
+@media screen and (max-width: 1200px) {
+    #club-ethod  {
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+    
+    #welcome {
+        padding: 30px 0;
+        margin: 0
+    }
+
+    #left-about #right-about{
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+
+    #center-about {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    hr {
+        display: none;
+    }
+
+
+}
+
+/* for medium screen sizes from 950 wide and down  */
+
+@media screen and (max-width: 950px) {
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+}
