styke gallery for responsive design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,26 +266,24 @@ footer{
 
 /* media queries */
 
-
-/* for larger to medium screen sizes from 1200 wide and down  */
+/* For larger to medium screens size from 1200px wide and down */
 @media screen and (max-width: 1200px) {
-    #club-ethod  {
+    #club-ethos {
         width: 65%;
         height: 1200px;
         margin: 0 auto;
     }
-    
+
     #welcome {
         padding: 30px 0;
-        margin: 0
+        margin: 0;
     }
 
-    #left-about #right-about{
+    #left-about, #right-about {
         width: 100%;
         float: left;
         padding: 0;
     }
-
 
     #center-about {
         clear: both;
@@ -294,16 +292,22 @@ footer{
         padding: 0;
     }
 
-    hr {
-        display: none;
+    #times div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
     }
 
 
+    hr {
+        display: none;
+    }
 }
 
-/* for medium screen sizes from 950 wide and down  */
-
+/* For medium screen sizes from 950px wide and down */
 @media screen and (max-width: 950px) {
+
     #menu {
         clear: left;
         float: left;
@@ -311,4 +315,43 @@ footer{
         margin-bottom: 20px;
         line-height: 25px;
     }
+
+    #cover-text {
+        left: 0;
+    }
+
+    #club-ethos {
+        width: 90%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    .left-about-heading, .right-about-heading {
+        width: inherit;
+    }
+
+    .left-about-heading h2, .right-about-heading h2 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .left-about-heading p, .right-about-heading p {
+        text-align: center;
+        padding: 0 20px;
+    }
+
+    #photos {
+        column-count: 3;
+    }
+
+
+}
+
+/* for smaller size screens 800 px and down */
+@media screen and (max-width: 900px) {
+
+    #photos {
+        column-count: 2;
+    }
+
 }
