--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oswald|Lato:300');
 
 *{
-    margin: 0;
-    padding: 0;
-    border: none;
+    margin:0;
+    padding:0;
+    border:0;
 }
 
 body{
     font-family: Lato, sans-serif;
-    font-weight: 300;
     color: #3a3a3a;
 }
 
@@ -27,18 +26,20 @@ h1, h2{
     margin-left: 30px;
 }
 
+/* navigation links */
+
 #menu{
     font-size: 110%;
     letter-spacing: 4px;
 }
 
-#menu, #logo{
+#logo, #menu{
     line-height: 75px;
 }
 
 #menu li {
     float: right;
-    list-style: none;
+    list-style-type: none;
     margin-right: 30px;
 }
 
@@ -47,55 +48,51 @@ h1, h2{
     color: inherit;
 }
 
-#menu a:hover {
+#menu a:hover{
     border-bottom: 1px solid #3a3a3a;
 }
 
-.active {
+.active{
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* hero image */
+/* Hero image and cover text */
 
-#hero-outer {
-    height: 600px;
+#hero-outer{
+    height:600px;
     width: 100%;
     overflow: hidden;
-
     position: relative;
 }
 
-#cover-text, #cover-text h2 {
-    color: #ffff;
-}
-
-
-#hero-image {
-    height: 600px;
+#hero-image{
+    height:600px;
     width: 100%;
-    background: url("../images/hero-image\ -\ Copy.webp") no-repeat center center;
+    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/main-image.png") no-repeat center center;
 
-    /* animates zoom effect on loading page */
+    /* Animates zoom effect on loading the page */
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
 
-/* creates the level of zoom for hero image */
-
+/* Creates the level of zoom for hero image */
 @keyframes hero-zoom {
-    from {
+    from{
         transform: scale(1);
     }
-
-    to {
+    to{
         transform: scale(1.1);
     }
 }
 
+#cover-text, #cover-text h2 {
+    color: #ffffff;
+}
+
 #cover-text {
     font-size: 130%;
-    font-family: Oswald, sans-serif;
+    font-family: Oswald;
     text-transform: uppercase;
     letter-spacing: 4px;
 
@@ -111,6 +108,36 @@ h1, h2{
     right: 150px;
 
     position: absolute;
+
+}
+
+/* Club ethos */
+
+#club-ethos{
+    height: 600px;
+}
+
+#left-about{
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
 }
 
 .left-about-heading {
@@ -121,72 +148,28 @@ h1, h2{
     margin-bottom: 50px;
 }
 
-/* club ethos */
-
-#club-ethos {
-    height: 600px;
-}
-
-#left-about {
-    padding-top: 30px;
-    width: 33%;
-    float: left;
-   
-}
-
-#right-about {
-    padding-top: 30px;
-    width: 33%;
-    float: right;
-    
-}
-
-#center-about {
-    width: 33%;
-    margin: 0 auto;
-    
-}
-
-hr {
-    border-top: 1px solid #3a3a3a;
-    width: 100%;
-    margin: 5px 0;
-
-}
-
-.left-about-heading {
-    width: 60%;
-    float: right;
-    line-height:  20px;
-    clear: both;
-    margin-bottom: 50px;
-}
-
 .right-about-heading {
     width: 60%;
     float: left;
-    line-height:  20px;
+    line-height: 20px;
     clear: both;
     margin-bottom: 50px;
+}
+
+.right-about-heading p {
+    text-align: right;
 }
 
 .right-about-heading h2 {
     text-align: right;
-
 }
 
-.right-about-heading p {
-    text-align: right;
-}
-
-.right-about-heading p {
-    text-align: right;
-}
+/* Club ethos center image */
 
 #welcome {
-    text-align: center;
     margin: 20px 0;
-    font-size: 200%;
+    text-align: center;
+    font-size: 280%;
 }
 
 #circle-container {
@@ -194,22 +177,22 @@ hr {
     height: 300px;
     padding: 30px;
     border-style: solid;
-    border-color: #ccc;
+    border-color: #cccccc;
     border-width: 1px;
     border-radius: 50%;
     margin: 0 auto;
 }
 
 #circle-cover-bg {
-    background: url("../images/ethos-center-image.jpg") no-repeat center center;
+    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/video-mask.png") no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
 
-/* event times */
+/* Event times */
 
 #times{
-    background-image: url("../images/dublin-city.webp");
+    background-image: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/dublin-city.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -219,8 +202,8 @@ hr {
 
 #times div {
     color: #fafafa;
-    background-color: rgba(0, 0, 0, .6);
-    width: 300px;
+    background-color: rgba(0,0,0, .6);
+    width: 20%;
     height: 300px;
     float: left;
     padding: 30px 0 0 10px;
@@ -233,37 +216,40 @@ hr {
     color: #fafafa;
 }
 
+/* Footer */
 
 footer{
     height: 150px;
 }
 
-.social-networks {
+.social-networks{
     text-align: center;
+
 }
 
-.social-networks > li {
+.social-networks li{
     display: inline;
 }
 
-.social-networks i {
+.social-networks i{
     font-size: 160%;
     margin: 1%;
     padding: 5%;
     color: #3a3a3a;
 }
 
-#photos {
+/* Gallery Photos */
+
+#photo {
     clear: both;
     line-height: 0;
     column-count: 4;
-    column-gap: 0;
+    column-gap: 0px;
 }
 
-#photos > img {
+#photo img{
     width: 100%;
 }
-
 
 /* Form */
 
@@ -320,13 +306,11 @@ footer{
     color: #f16c6b;
 }
 
+/* Media queries */
 
-
-/* media queries */
-
-/* For larger to medium screens size from 1200px wide and down */
-@media screen and (max-width: 1200px) {
-    #club-ethos {
+/* For large to medium screens sizes from 1200px wide and down */
+@media screen and (max-width: 1200px){
+    #club-ethos{
         width: 65%;
         height: 1200px;
         margin: 0 auto;
@@ -334,16 +318,16 @@ footer{
 
     #welcome {
         padding: 30px 0;
-        margin: 0;
+        margin-top: 0;
     }
 
     #left-about, #right-about {
-        width: 100%;
-        float: left;
+        width:100%;
+        float:left;
         padding: 0;
     }
 
-    #center-about {
+    #center-about{
         clear: both;
         width: 100%;
         float: left;
@@ -357,59 +341,54 @@ footer{
         padding: 0;
     }
 
-
     hr {
         display: none;
     }
 }
 
-/* For medium screen sizes from 950px wide and down */
-@media screen and (max-width: 950px) {
+/* For medium screens sizes from 950px wide and down */
+@media screen and (max-width: 950px){
 
-    #menu {
+    #menu{
         clear: left;
         float: left;
-        margin-left: 30px;
+        margin-left: 30px; 
         margin-bottom: 20px;
         line-height: 25px;
     }
 
-    #cover-text {
-        left: 0;
+    #cover-text{
+        left:0px;
     }
 
-    #club-ethos {
-        width: 90%;
+    #club-ethos{
+        width:90%;
         height: 1200px;
         margin: 0 auto;
     }
 
-    .left-about-heading, .right-about-heading {
+    .left-about-heading, .right-about-heading{
         width: inherit;
     }
 
-    .left-about-heading h2, .right-about-heading h2 {
+    .left-about-heading h2, .right-about-heading h2{
         width: 100%;
         text-align: center;
     }
 
-    .left-about-heading p, .right-about-heading p {
+    .left-about-heading p, .right-about-heading p{
         text-align: center;
-        padding: 0 20px;
+        padding: 0 20px 0 20px;
     }
 
-    #photos {
+    #photo{
         column-count: 3;
     }
-
-
 }
 
-/* for smaller size screens 800 px and down */
-@media screen and (max-width: 900px) {
-
-    #photos {
+/* For small screens sizes from 800px wide and down */
+@media screen and (max-width: 800px){
+    #photo{
         column-count: 2;
     }
-
 }
